--- a/technologypage.css
+++ b/technologypage.css
@@ -9,7 +9,7 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 20px;
-  background-color: #483d8b;
+  background-color: #333;
 }
 
 h1, h2 {
