--- a/homecss.css
+++ b/homecss.css
@@ -68,3 +68,11 @@ h2 {
 .google-meet-link:hover {
     background-color: #0069d9;
 }
+
+.logo {
+    margin: 0 -5px;
+}
+
+img {
+    height: 150px
+}
