--- a/contactus.css
+++ b/contactus.css
@@ -1,11 +1,12 @@
 body {
-    background-color: #2c3e50;
+    background-color: #333;
     color: #fff;
     font-family: sans-serif;
+
 }
 
 main {
-    padding: 50px;
+    padding: 10px;
 }
 
 section {
