--- a/logincss.css
+++ b/logincss.css
@@ -41,6 +41,10 @@ button {
     font-size: 18px;
   }
 
+a {
+    color: #fff;
+}
+
 button:hover {
     opacity: 0.6;
     cursor: pointer;
@@ -117,3 +121,10 @@ span.forgotpsd a {
       width: 20rem;
     }
   }
+    li a {
+      display: block;
+      color: #fff;
+      padding: 10px 20px;
+      text-decoration: none;
+      transition: background-color 0.2s ease;
+    }
