--- a/register.css
+++ b/register.css
@@ -1,51 +1,130 @@
-body {
-  background-color: #1a1a1a;
-  color: #fff;
-  font-family: sans-serif;
+
+body 
+{
+  font-family:sans-serif; 
+  background: linear-gradient(109.6deg, rgb(221, 62, 84) 11.2%, rgb(156, 76, 186) 100.2%);
 }
 
-.container {
-  margin: 0 auto;
-  max-width: 600px;
-  padding: 50px;
+
+h1{
+    text-align: center;
 }
 
-form {
-  display: flex;
-  flex-direction: column;
+
+form{
+    width:35rem;
+    margin: auto;
+    color:whitesmoke;
+    backdrop-filter: blur(16px) saturate(180%);
+    -webkit-backdrop-filter: blur(16px) saturate(180%);
+    background-color: rgba(11, 15, 13, 0.582);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.125);
+    padding: 20px 20px;
 }
 
-label {
-  margin-bottom: 10px;
+input[type=text], input[type=password]{
+    width: 100%;
+    margin: 10px 0;
+    border-radius: 5px;
+    padding: 10px 15px;
+    box-sizing: border-box;
+  }
+
+button {
+    background-color: #000000;
+    color: rgb(200, 0, 93);
+    padding: 14px 20px;
+    border-radius: 5px;
+    margin: 7px 0;
+    width: 10%;
+    font-size: 18px;
+  }
+
+a {
+    color: #fff;
 }
 
-.form-group {
-  margin-bottom: 20px;
+button:hover {
+    opacity: 0.6;
+    cursor: pointer;
 }
 
-input[type="text"],
-input[type="password"],
-input[type="email"],
-input[type="date"] {
-  background-color: #333;
-  border: none;
-  border-radius: 5px;
-  color: #fff;
-  font-size: 16px;
-  padding: 10px;
+.logo{
+  margin: 0 690px;
 }
 
-button[type="submit"] {
-  background-color: #0077b6;
-  border: none;
-  border-radius: 5px;
-  color: #fff;
-  cursor: pointer;
-  font-size: 18px;
-  padding: 10px;
-  transition: background-color 0.2s ease;
+img{
+  height: 130px;
 }
 
-button[type="submit"]:hover {
-  background-color: #023e8a;
+.headingsContainer{
+    text-align: center;
 }
+
+.headingsContainer p{
+    color: gray;
+}
+.mainContainer{
+    padding: 20px;
+}
+
+
+.subcontainer{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.subcontainer a{
+    font-size: 16px;
+    margin-bottom: 12px;
+}
+
+span.forgotpsd a {
+    float: right;
+    color: whitesmoke;
+    padding-top: 16px;
+  }
+
+.forgotpsd a{
+    color: rgb(74, 146, 235);
+  }
+  
+.forgotpsd a:link{
+    text-decoration: none;
+  }
+
+  .register{
+    color: white;
+    text-align: center;
+  }
+  
+  .register a{
+    color: rgb(74, 146, 235);
+  }
+  
+  .register a:link{
+    text-decoration: none;
+  }
+
+  /* Media queries for the responsiveness of the page */
+  @media screen and (max-width: 600px) {
+    form{
+      width: 25rem;
+    }
+  }
+  
+  @media screen and (max-width: 400px) {
+    form{
+      width: 20rem;
+    }
+  }
+    li a {
+      display: block;
+      color: hsl(0, 0%, 100%);
+      padding: 10px 20px;
+      text-decoration: none;
+      transition: background-color 0.2s ease;
+    }
